--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@lottiefiles/react-lottie-player": "^3.5.4",
     "antd": "^5.20.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
