--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-router-hash-link": "^2.4.3",
+    "react-slick": "^0.30.2",
     "react-vertical-timeline-component": "^3.6.0",
     "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
     "sonner": "^1.5.0",
     "zod": "^3.23.8"
   },
@@ -36,6 +38,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-router-hash-link": "^2.4.9",
+    "@types/react-slick": "^0.23.13",
     "@types/react-vertical-timeline-component": "^3.3.6",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
