--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "query-string": "^9.1.0",
     "react": "^18.3.1",
     "react-custom-roulette": "^1.4.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
